--- a/frontend/src/pages/work/components/UserPopup.css
+++ b/frontend/src/pages/work/components/UserPopup.css
@@ -21,6 +21,7 @@
   max-width: 440px;
   box-shadow: var(--shadow-light);
   border: 1px solid var(--color-border);
+  position: relative; /* חובה בשביל שה-X ימוקם ביחס אליו */
 }
 
 .user-popup-inner h2 {
@@ -126,24 +127,19 @@
 }
 .popup-close {
   position: absolute !important;
-  top: 20px !important;
-  left: 20px !important;
+  top: 1.5rem !important;
+  right: 13rem !important;
   background: none !important;
   border: none !important;
   color: var(--color-main) !important;
-  font-size: 24px !important;
+  font-size: 30px !important;
   cursor: pointer !important;
+  padding: 0 !important;
   z-index: 1001 !important;
-  padding: 0;
   line-height: 1;
-  transition: color 0.3s ease;
 }
 
 .popup-close:hover {
   color: var(--color-accent-dark) !important;
   background: none !important;
 }
-.user-popup-inner {
-  position: relative;
-}
-
